Fix overflow for Mobile Safari

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -112,6 +112,7 @@ html {
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
+    overflow-x: hidden;
 
     &.fonts-loaded,
     &.no-js {
